# qa-aqa

./: .gitignore  README.md
clients/web/: Containerfile  index.html  package.json  vite.config.ts
clients/web/src/: App.tsx  main.tsx
clients/web/src/components/: ArtefactCard.tsx  Layout.tsx  StateTransitionMenu.tsx
clients/web/src/lib/: api.ts  auth.tsx  queries.ts
clients/web/src/pages/: DesignerPage.tsx  LoginPage.tsx  MonitorPage.tsx  WorkflowDetailPage.tsx  WorkflowRunPage.tsx  WorkflowsListPage.tsx
docs/superpowers/plans/: 2026-06-30-d1_4_1-cancel-abort.md
docs/superpowers/specs/: 2026-06-25-podman-foundation-data-observability-design.md  2026-06-25-sub-project-c-model-gateway-rag-policy-design.md  2026-06-25-sub-project-d0_5-compliance-substrate-design.md  2026-06-25-sub-project-d1-agent-workers-artefact-service-design.md  2026-06-25-sub-project-d1_1-executor-agent-design.md  2026-06-25-sub-project-d1_2-ephemeral-sandboxes-design.md  2026-06-26-sub-project-d1_3-tls-mitm-egress-allowlist-design.md  2026-06-28-sub-project-d3-api-gateway-bff-web-app-design.md  2026-06-29-sub-project-d1_4-async-queue-tenant-quotas-design.md  2026-06-30-sub-project-d1_4_1-cancel-abort-design.md
infra/: .env.example  infra.sh
services/agent-workers/: Containerfile  pyproject.toml
services/agent-workers/src/: activities.py  agent.py  attestation.py  config.py  critic.py  executor_agent.py  registry.py  start_workflow.py  worker.py  workflow.py  workflow_execute.py
services/artefact/: Containerfile  pyproject.toml
services/artefact/seed/: approval_policy.default_v1.yaml  critique_policy.test_case.v1.yaml
services/artefact/src/: main.py  policy.py  schema.py  urn.py
services/bff/: Containerfile  pyproject.toml
services/bff/seed/: users.yaml
services/bff/src/: auth.py  config.py  deps.py  main.py
services/bff/src/clients/: artefact.py  temporal.py
services/policy/: Containerfile  pyproject.toml
services/policy/src/: main.py
services/proxy/: Containerfile
services/proxy/src/: addon.py
services/rag/: Containerfile  pyproject.toml
services/rag/src/: main.py
services/runner/: Containerfile  pyproject.toml
services/runner/src/: main.py  playwright_runner.py  queue.py  sandbox_executor.py  script_generator.py  storage.py
services/sandbox-image/: Containerfile
