[project]
name = "agent-workers"
version = "0.1.0"
description = "Temporal worker hosting LangGraph-built agents. Calls model-gateway, rag-service, policy-svc, artefact-service."
requires-python = ">=3.12"
dependencies = [
    "temporalio==1.7.1",
    "langgraph==0.2.50",
    "langchain-core==0.3.15",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
]
