[project]
name = "artefact-service"
version = "0.1.0"
description = "Versioned, RLS-isolated artefact store with URN actors, idempotency, and approval-policy-as-data."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "asyncpg==0.29.0",
    "pyyaml==6.0.2",
]
