[project]
name = "bff"
version = "0.1.0"
description = "Backend-for-frontend: JWT auth, artefact-service proxy, Temporal SDK reads, MinIO presigning."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "temporalio==1.7.1",
    "boto3==1.35.49",
    "pyyaml==6.0.2",
]
