[project]
name = "rag-service"
version = "0.1.0"
description = "Hybrid retrieval: pgvector ANN + OpenSearch BM25 fused with RRF, embeddings via model-gateway."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "asyncpg==0.29.0",
    "opensearch-py==2.7.1",
    "aiohttp==3.10.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "anyio==4.6.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
