[project]
name = "runner-service"
version = "0.1.0"
description = "Playwright executor for QA/AQA. Runs translated test_case scripts in-process; uploads artefacts to MinIO."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "playwright==1.48.0",
    "minio==7.2.10",
]
