[project]
name = "runner-service"
version = "0.2.0"
description = "Playwright executor for QA/AQA. Async runs queue + per-tenant quotas (Valkey-backed). Spawns ephemeral sandbox containers per /runs call."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "playwright==1.48.0",
    "minio==7.2.10",
    "valkey==6.0.2",
]
